[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/PixelSpaceRage/256px/Enemy01_Green_Frame_1_png_processed.png" type="Texture" id=1]
[ext_resource path="res://src/AdvancedEnemies/AdvancedEnemyEasy.gd" type="Script" id=2]
[ext_resource path="res://assets/PixelSpaceRage/256px/Exhaust_Frame_02_png_processed.png" type="Texture" id=3]
[ext_resource path="res://assets/PixelSpaceRage/256px/Exhaust_Frame_01_png_processed.png" type="Texture" id=4]
[ext_resource path="res://src/Projectiles/PhotonSingleBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_06_png_processed.png" type="Texture" id=6]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_05_png_processed.png" type="Texture" id=7]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_07_png_processed.png" type="Texture" id=8]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_04_png_processed.png" type="Texture" id=9]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_03_png_processed.png" type="Texture" id=10]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_08_png_processed.png" type="Texture" id=11]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_01_png_processed.png" type="Texture" id=12]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_09_png_processed.png" type="Texture" id=13]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_02_png_processed.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "active",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "destroyed",
"speed": 26.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 11 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
} ]

[node name="AdvancedEnemyEasy" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="." groups=[
"enemy_ship",
"hazard",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( -14.6866, 16.6564, -3.66231, 25.7908, 2.6373, 25.7908, 14.2916, 17.9163, 32.2454, 4.6871, 32.2839, -3.085, 10.4571, -17.7685, -8.79011, -17.57, -31.2122, -2.68815, -31.2122, 4.0583 )

[node name="Muzzle1" type="Position2D" parent="."]
position = Vector2( -18.1771, 7.58052 )

[node name="Muzzle2" type="Position2D" parent="."]
position = Vector2( 18.3029, 7.58052 )

[node name="Exhaust1" type="AnimatedSprite" parent="."]
position = Vector2( -18.1771, -18.1237 )
frames = SubResource( 1 )
animation = "active"
flip_v = true

[node name="Exhaust2" type="AnimatedSprite" parent="."]
position = Vector2( 17.3029, -19.0602 )
frames = SubResource( 1 )
animation = "active"
flip_v = true

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 7 )
frames = SubResource( 2 )
animation = "hit"
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
